TKiK/src/main/java/agh/TKiKParser.java
// Generated from TKiK.g4 by ANTLR 4.9.2
package agh;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TKiKParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL=1, CHAR=2, DOUBLE=3, FLOAT=4, INT=5, STRING=6, VOID=7, BOOLEAN=8, 
		FALSE=9, TRUE=10, BREAK=11, CONTINUE=12, RETURN=13, FOR=14, ELSE=15, IF=16, 
		WHILE=17, CIN=18, COUT=19, USING=20, INCLUDE=21, NAMESPACE=22, STD=23, 
		LEFTPAREN=24, RIGHTPAREN=25, LEFTBRACKET=26, RIGHTBRACKET=27, LEFTBRACE=28, 
		RIGHTBRACE=29, PLUS=30, MINUS=31, STAR=32, DIV=33, MOD=34, ASSIGN=35, 
		LESS=36, GREATER=37, EQUALS=38, NOTEQUALS=39, LESSEQUALS=40, GREATEREQUALS=41, 
		PLUSPLUS=42, MINUSMINUS=43, DIVASSIGN=44, MODASSIGN=45, MULASSIGN=46, 
		AND=47, OR=48, COMMA=49, QUESTION=50, EXCLAMATION=51, COLON=52, SEMI=53, 
		DOT=54, QUOTE=55, NUMBER=56, ID=57, NONDIGIT=58, DIGIT=59, NONZERODIGIT=60, 
		CHARACTER=61, TEXT=62, NATURAL=63, WHITESPACE=64, NEWLINE=65, BLOCKCOMMENT=66, 
		LINECOMMENT=67;
	public static final int
		RULE_entire_program = 0, RULE_library = 1, RULE_using = 2, RULE_function = 3, 
		RULE_argument = 4, RULE_code = 5, RULE_body = 6, RULE_body_element = 7, 
		RULE_variable_declaration = 8, RULE_double_operator = 9, RULE_single_operator = 10, 
		RULE_statement = 11, RULE_variable = 12, RULE_return_statement = 13, RULE_if_statement = 14, 
		RULE_while_statement = 15, RULE_for_statement = 16, RULE_expression = 17, 
		RULE_type = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"entire_program", "library", "using", "function", "argument", "code", 
			"body", "body_element", "variable_declaration", "double_operator", "single_operator", 
			"statement", "variable", "return_statement", "if_statement", "while_statement", 
			"for_statement", "expression", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'char'", "'double'", "'float'", "'int'", "'string'", 
			"'void'", null, "'false'", "'true'", "'break'", "'continue'", "'return'", 
			"'for'", "'else'", "'if'", "'while'", "'cin'", "'cout'", "'using'", "'#include <'", 
			"'namespace'", "'std;'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'='", "'<'", "'>'", "'=='", "'!='", "'<='", 
			"'>='", "'++'", "'--'", "'/='", "'%='", "'*='", "'&&'", "'||'", "','", 
			"'?'", "'!'", "':'", "';'", "'.'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOL", "CHAR", "DOUBLE", "FLOAT", "INT", "STRING", "VOID", "BOOLEAN", 
			"FALSE", "TRUE", "BREAK", "CONTINUE", "RETURN", "FOR", "ELSE", "IF", 
			"WHILE", "CIN", "COUT", "USING", "INCLUDE", "NAMESPACE", "STD", "LEFTPAREN", 
			"RIGHTPAREN", "LEFTBRACKET", "RIGHTBRACKET", "LEFTBRACE", "RIGHTBRACE", 
			"PLUS", "MINUS", "STAR", "DIV", "MOD", "ASSIGN", "LESS", "GREATER", "EQUALS", 
			"NOTEQUALS", "LESSEQUALS", "GREATEREQUALS", "PLUSPLUS", "MINUSMINUS", 
			"DIVASSIGN", "MODASSIGN", "MULASSIGN", "AND", "OR", "COMMA", "QUESTION", 
			"EXCLAMATION", "COLON", "SEMI", "DOT", "QUOTE", "NUMBER", "ID", "NONDIGIT", 
			"DIGIT", "NONZERODIGIT", "CHARACTER", "TEXT", "NATURAL", "WHITESPACE", 
			"NEWLINE", "BLOCKCOMMENT", "LINECOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TKiK.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TKiKParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Entire_programContext extends ParserRuleContext {
		public UsingContext using() {
			return getRuleContext(UsingContext.class,0);
		}
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public List<LibraryContext> library() {
			return getRuleContexts(LibraryContext.class);
		}
		public LibraryContext library(int i) {
			return getRuleContext(LibraryContext.class,i);
		}
		public Entire_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entire_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterEntire_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitEntire_program(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitEntire_program(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entire_programContext entire_program() throws RecognitionException {
		Entire_programContext _localctx = new Entire_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entire_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				library();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INCLUDE );
			setState(43);
			using();
			setState(44);
			code();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LibraryContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(TKiKParser.INCLUDE, 0); }
		public TerminalNode ID() { return getToken(TKiKParser.ID, 0); }
		public TerminalNode GREATER() { return getToken(TKiKParser.GREATER, 0); }
		public LibraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_library; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterLibrary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitLibrary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitLibrary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LibraryContext library() throws RecognitionException {
		LibraryContext _localctx = new LibraryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_library);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(INCLUDE);
			setState(47);
			match(ID);
			setState(48);
			match(GREATER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsingContext extends ParserRuleContext {
		public TerminalNode USING() { return getToken(TKiKParser.USING, 0); }
		public TerminalNode NAMESPACE() { return getToken(TKiKParser.NAMESPACE, 0); }
		public TerminalNode STD() { return getToken(TKiKParser.STD, 0); }
		public UsingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_using; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterUsing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitUsing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitUsing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsingContext using() throws RecognitionException {
		UsingContext _localctx = new UsingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_using);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(USING);
			setState(51);
			match(NAMESPACE);
			setState(52);
			match(STD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(TKiKParser.ID, 0); }
		public TerminalNode LEFTPAREN() { return getToken(TKiKParser.LEFTPAREN, 0); }
		public TerminalNode RIGHTPAREN() { return getToken(TKiKParser.RIGHTPAREN, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			type();
			setState(55);
			match(ID);
			setState(56);
			match(LEFTPAREN);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << CHAR) | (1L << DOUBLE) | (1L << FLOAT) | (1L << INT) | (1L << STRING) | (1L << VOID))) != 0)) {
				{
				setState(57);
				argument();
				}
			}

			setState(60);
			match(RIGHTPAREN);
			setState(61);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(TKiKParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TKiKParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TKiKParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TKiKParser.COMMA, i);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			type();
			setState(64);
			match(ID);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(65);
				match(COMMA);
				setState(66);
				type();
				setState(67);
				match(ID);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				function();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << CHAR) | (1L << DOUBLE) | (1L << FLOAT) | (1L << INT) | (1L << STRING) | (1L << VOID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public TerminalNode LEFTBRACE() { return getToken(TKiKParser.LEFTBRACE, 0); }
		public TerminalNode RIGHTBRACE() { return getToken(TKiKParser.RIGHTBRACE, 0); }
		public List<Body_elementContext> body_element() {
			return getRuleContexts(Body_elementContext.class);
		}
		public Body_elementContext body_element(int i) {
			return getRuleContext(Body_elementContext.class,i);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(LEFTBRACE);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << CHAR) | (1L << DOUBLE) | (1L << FLOAT) | (1L << INT) | (1L << STRING) | (1L << VOID) | (1L << BOOLEAN) | (1L << FOR) | (1L << IF) | (1L << WHILE) | (1L << LEFTPAREN) | (1L << LEFTBRACE) | (1L << PLUSPLUS) | (1L << MINUSMINUS) | (1L << EXCLAMATION) | (1L << NUMBER) | (1L << ID) | (1L << TEXT))) != 0)) {
				{
				{
				setState(80);
				body_element();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(86);
				return_statement();
				}
			}

			setState(89);
			match(RIGHTBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_elementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Body_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterBody_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitBody_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitBody_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Body_elementContext body_element() throws RecognitionException {
		Body_elementContext _localctx = new Body_elementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_body_element);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case CHAR:
			case DOUBLE:
			case FLOAT:
			case INT:
			case STRING:
			case VOID:
			case FOR:
			case IF:
			case WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				statement();
				}
				break;
			case BOOLEAN:
			case LEFTPAREN:
			case LEFTBRACE:
			case PLUSPLUS:
			case MINUSMINUS:
			case EXCLAMATION:
			case NUMBER:
			case ID:
			case TEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(TKiKParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(TKiKParser.SEMI, 0); }
		public TerminalNode LEFTBRACKET() { return getToken(TKiKParser.LEFTBRACKET, 0); }
		public TerminalNode RIGHTBRACKET() { return getToken(TKiKParser.RIGHTBRACKET, 0); }
		public TerminalNode ASSIGN() { return getToken(TKiKParser.ASSIGN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NATURAL() { return getToken(TKiKParser.NATURAL, 0); }
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitVariable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable_declaration);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				type();
				setState(96);
				match(ID);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFTBRACKET) {
					{
					setState(97);
					match(LEFTBRACKET);
					setState(98);
					match(RIGHTBRACKET);
					}
				}

				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(101);
					match(ASSIGN);
					setState(104);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(102);
						variable();
						}
						break;
					case 2:
						{
						setState(103);
						expression(0);
						}
						break;
					}
					}
				}

				setState(108);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				type();
				setState(111);
				match(ID);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFTBRACKET) {
					{
					setState(112);
					match(LEFTBRACKET);
					setState(113);
					match(NATURAL);
					setState(114);
					match(RIGHTBRACKET);
					}
				}

				setState(117);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Double_operatorContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(TKiKParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(TKiKParser.MINUS, 0); }
		public TerminalNode STAR() { return getToken(TKiKParser.STAR, 0); }
		public TerminalNode DIV() { return getToken(TKiKParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(TKiKParser.MOD, 0); }
		public TerminalNode LESS() { return getToken(TKiKParser.LESS, 0); }
		public TerminalNode AND() { return getToken(TKiKParser.AND, 0); }
		public TerminalNode OR() { return getToken(TKiKParser.OR, 0); }
		public TerminalNode GREATER() { return getToken(TKiKParser.GREATER, 0); }
		public TerminalNode EQUALS() { return getToken(TKiKParser.EQUALS, 0); }
		public TerminalNode NOTEQUALS() { return getToken(TKiKParser.NOTEQUALS, 0); }
		public TerminalNode LESSEQUALS() { return getToken(TKiKParser.LESSEQUALS, 0); }
		public TerminalNode GREATEREQUALS() { return getToken(TKiKParser.GREATEREQUALS, 0); }
		public TerminalNode DIVASSIGN() { return getToken(TKiKParser.DIVASSIGN, 0); }
		public TerminalNode MODASSIGN() { return getToken(TKiKParser.MODASSIGN, 0); }
		public TerminalNode MULASSIGN() { return getToken(TKiKParser.MULASSIGN, 0); }
		public TerminalNode ASSIGN() { return getToken(TKiKParser.ASSIGN, 0); }
		public Double_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterDouble_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).exitDouble_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TKiKVisitor ) return ((TKiKVisitor<? extends T>)visitor).visitDouble_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Double_operatorContext double_operator() throws RecognitionException {
		Double_operatorContext _localctx = new Double_operatorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_double_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << STAR) | (1L << DIV) | (1L << MOD) | (1L << ASSIGN) | (1L << LESS) | (1L << GREATER) | (1L << EQUALS) | (1L << NOTEQUALS) | (1L << LESSEQUALS) | (1L << GREATEREQUALS) | (1L << DIVASSIGN) | (1L << MODASSIGN) | (1L << MULASSIGN) | (1L << AND) | (1L << OR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_operatorContext extends ParserRuleContext {
		public TerminalNode PLUSPLUS() { return getToken(TKiKParser.PLUSPLUS, 0); }
		public TerminalNode MINUSMINUS() { return getToken(TKiKParser.MINUSMINUS, 0); }
		public TerminalNode EXCLAMATION() { return getToken(TKiKParser.EXCLAMATION, 0); }
		public Single_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TKiKListener ) ((TKiKListener)listener).enterSingle_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
